# bibtexer

./: Cargo.toml  LICENSE  README.md  pyproject.toml
bibtexer/: __init__.py  _bibtexer_rust.pyi  _convert.py
bibtexer/formats/: APA.json  simple.json
src/: authors.rs  errors.rs  lib.rs  structs.rs
