[package]
name = "bibtexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bibtexer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
regex = "1.5.4"
